syntax = "proto3";

package food;
option go_package = "proto/food";

message GetFoodByIdRequest {
  int64 Id = 1;
}

message Food {
    string  Foodid = 1;
    string  Name = 2;
    string  Brand = 3;
    float   Amount = 4;
    string  Unit = 5;
    float   Carb = 6;
    float   Portein = 7;
    float   Fat = 8;
    float   Cal = 9;
}
message GetFoodsRequest{}
message GetFoodByIdResponse {
    Food food = 1;
}
message GetFoodsResponse {
    repeated Food food = 1;
}

message FoodRequest {
    Food food = 1;
}

message GetAllResponse {
    repeated Food foods = 1;
}

message DefaultResponse {
    string result = 1;
}

message DeleteFoodRequest {
  int64 Id = 1;
}

service FoodService {
  rpc GetFoodById(GetFoodByIdRequest) returns (GetFoodByIdResponse) {};
  rpc GetFoods(GetFoodsRequest) returns (GetFoodsResponse) {};
  rpc CreateFood(FoodRequest) returns (DefaultResponse) {};
  rpc UpdateFood(FoodRequest) returns (DefaultResponse) {};
  rpc DeleteFood(DeleteFoodRequest) returns (DefaultResponse) {};
}
